feat: implement Appwrite authentication

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["node"]
   },
   "include": [
     "next-env.d.ts",
