--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.312.0",
     "next": "14.0.4",
     "next-themes": "^0.4.4",
+    "node-appwrite": "^14.1.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
