--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["node"]
+    "types": ["node"],
+    "baseUrl": "."
   },
   "include": [
     "next-env.d.ts",
